Started decompilation of Terrain.dll
# |<----  Using a Maximum Of 50 Characters  ---->|


# Explain why this change is being made
# |<----   Try To Limit Each Line to a Maximum Of 72 Characters   ---->|

# Provide links or keys to any relevant tickets, articles or other resources
# Example: Github issue #23

# --- COMMIT END ---
# Type can be
#    feat     (new feature)
#    fix      (bug fix)
#    refactor (refactoring production code)
#    style    (formatting, missing semi colons, etc; no code change)
#    docs     (changes to documentation)
#    test     (adding or refactoring tests; no production code change)
#    chore    (updating grunt tasks etc; no production code change)
# --------------------
# Remember to
#    Capitalize the subject line
#    Use the imperative mood in the subject line
#    Do not end the subject line with a period
#    Separate subject from body with a blank line
#    Use the body to explain what and why vs. how
#    Can use multiple lines with "-" for bullet points in body
# --------------------
# For more information about this template, check out
# https://gist.github.com/adeekshith/cd4c95a064977cdc6c50

--- a/src/2d-game-engine/CMakeLists.txt
+++ b/src/2d-game-engine/CMakeLists.txt
@@ -1,9 +1,20 @@
 # CMAKE project for libopenSMSG (core OpenSMSG component)
 cmake_minimum_required(VERSION 3.1)
 
-add_executable(opensmsg-engine )
+#set(HEADERS Game.hpp )
+#set(SRC_LIST main.cpp Game.cpp)
 
-target_link_libraries(opensmsg-engine
+add_executable(2d-game-engine
+#        ${SRC_LIST} ${HEADERS}
+        main.cpp
+        Game.cpp
+        Game.h
+        TextureManager.cpp
+        TextureManager.h
+        )
+
+target_link_libraries(2d-game-engine
+
         "-framework Cocoa"
         "-framework IOKit"
         "-framework OpenGL"
